@@ -1,9 +1,8 @@
 PREFIX?=/usr/local
-LIBDIR=${PREFIX}/lib
 CFLAGS= -O0 -Wall -Werror -Wno-unused-function -fPIC -std=c99
 
 
-SRCS= xorg.c event.c text.c win.c image.c
+SRCS= xorg.c event.c text.c win.c image.c group.c
 INCS= -I /usr/X11R6/include -I /usr/X11R6/include/freetype2
 LIBS= -L /usr/X11R6/lib -lxcb -lxcb-render -lxcb-render-util -lxcb-image
 LIBS+= -lfreetype
@@ -26,10 +25,22 @@ all: mui
 mui: ${OBJS}
 	${CC} -shared -Wl,-soname,libmui.so -o libmui.so ${OBJS} ${LIBS}
 
+
+install: mui
+	install -m 644 libmui.so ${PREFIX}/lib
+	install -m 644 mui.h ${PREFIX}/include
+
+
+uninstall:
+	rm -rf ${PREFIX}/lib/libmui.so
+	rm -rf ${PREFIX}/include/mui.h
+
+
 clean:
 	make clean -C demo/hello_win
 	make clean -C demo/multiline
 	make clean -C demo/image
+	make clean -C demo/group
 	rm -f libmui.so ${OBJS}
 
-.PHONY: all mui
+.PHONY: all mui install uninstall
