@@ -1,4 +1,8 @@
-@date
+2025-06-21
+ - Created the group type with demo
+ - Some code cleanup
+
+2025-06-19
 
  - Remove `mui.c` to append to `win.c`
  - Added `image.c` for image rendering
